<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androdino</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    
    <string name="toggle_invert_stick1">inv horiz</string>
    <string name="toggle_invert_stick2">inv vert</string>
    <string name="toggle_lights">lights</string>
    <string name="toggle_misc1">misc1</string>
    <string name="toggle_misc2">digital</string>
    <string name="toggle_tankmode">tank</string>
    <string name="debug_text">debug text goes here</string>

    <string name="title_activity_bluetooth_test">BluetoothTestActivity</string>
    <string name="lbl_test_for_bluetooth">Test For Bluetooth</string>
    <string name="launch_bluetooth_activity">Launch Bluetooth Activity</string>
    <string name="pick_a_device">Pick a Device</string>
    <string name="title_activity_device_list">Device List</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discoverable_devices">Discoverable Devices</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="none_paired">None paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="none_found">None Found</string>
    <string name="title_lights_on">Lights On</string>
    <string name="title_lights_off">Lights Off</string>
    <string name="not_connected">not connected</string>
    <string name="connected">Connected!!</string>
    <string name="title_connected_to">title_connected_to</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>
    
    
</resources>