<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RemoteControlActivity" >
    
    <!-- button row -->
    <LinearLayout
        android:id="@+id/button_row"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
			<ToggleButton
		        android:id="@+id/toggleThumbstick1"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:textOn="@string/toggle_invert_stick1" 
		        android:textOff="@string/toggle_invert_stick1" 
		        android:textSize="10sp" 
		        android:onClick="toggleClicked"
		        />
		
		    <ToggleButton
		        android:id="@+id/toggleButton1"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:textOn="@string/toggle_lights" 
		        android:textOff="@string/toggle_lights" 
		        android:textSize="10sp" 
		        android:onClick="toggleClicked"
		        />
		
		    <ToggleButton
		        android:id="@+id/toggleButton2"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:textOn="@string/toggle_misc1" 
		        android:textOff="@string/toggle_misc1"
		        android:textSize="10sp" 
		        android:onClick="toggleClicked"
		        />

		    <ToggleButton
		        android:id="@+id/toggleThumbstick2"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:textOff="@string/toggle_invert_stick2"
		        android:textOn="@string/toggle_invert_stick2" 
		        android:textSize="10sp" 
		        android:onClick="toggleClicked"
		        />

        </LinearLayout>
        
	<!-- third row, thumbsticks -->
	<LinearLayout
		android:id="@+id/thumbstick_row"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="7">
	    <us.youfailed.androdino.AnalogControlView
	        android:id="@+id/thumbstick1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="#ff332211"
	         />
	    
	    <us.youfailed.androdino.AnalogControlView
	        android:id="@+id/thumbstick2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="#ff112233" />
	</LinearLayout>
    
    <!-- console row -->
    <TextView
        android:id="@+id/debug_console"
        android:layout_width="fill_parent"
        android:minHeight="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/debug_text"
        android:focusable="false"
        android:textSize="20sp" 
        
        />
	
    
    
</LinearLayout>