<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceListActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discoverable_devices" />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:stackFromBottom="true"
            android:layout_weight="1" ></ListView>
            
	    <TextView
	        android:id="@+id/title_paired_devices"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/paired_devices" />

	    <ListView
	        android:id="@+id/paired_devices"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
            android:stackFromBottom="true"
	        android:layout_weight="2" 
	        >
	    </ListView>

	    <Button
	        android:id="@+id/button_scan"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/scan_for_devices" />

    </LinearLayout>


</RelativeLayout>